# networking-tables

./: Makefile  README.md
networking-tabels/: .gitignore
networking-tabels/networking_tabels/: utils.py
networking-tabels/tests/: test_integration.py
nt-go/: main.go  main_test.go
nt-python/: pyproject.toml
nt-python/networking_tabels/: main.py  schemas.py
nt_go/: go.mod  go.sum  main.go  main_test.go
nt_python/: .pylintrc  pyproject.toml
nt_python/networking_tabels/: utils.py
nt_python/tests/: test_e2e.py
